--- a/index.html
+++ b/index.html
@@ -325,9 +325,9 @@
 						<div class="contacts-block">
 							<form action="telegram.php" method="POST" class="contacts-form wow animate__animated animate__fadeInBottomLeft">
 								<h4 class="form-title">Можете просто оставить заявку, я позвоню вам сегодня</h4>				
-								<input type="text" name="user_name" class="input input-name" placeholder="Ваше имя">
-								<input type="text" name="user_phone" class="input input-phone" placeholder="Ваш телефон">
-								<button class="button">Бесплатная консультация</button>
+								<input type="text" id="" name="user_name" class="input input-name" placeholder="Ваше имя">
+								<input type="text" id="" name="user_phone" class="input input-phone" placeholder="Ваш телефон">
+								<button type="submit" class="button">Бесплатная консультация</button>
 							</form>
 							<div class="contacts-text wow animate__animated animate__fadeInRight">
 								<div class="contacts-data">
